# LiDAR-Gimbal-fusion

./: .gitignore  Dockerfile  README.MD  localization.sh  mapping.sh  run_docker.sh  signpoints.csv
FreeSLAM/FreeSLAM/: CMakeLists.txt
FreeSLAM/FreeSLAM/include/FreeSLAM/: Mapping.hpp
FreeSLAM/FreeSLAM/src/: Mapping.cpp
FreeSLAM/FreeSLAM_ros/: CMakeLists.txt
FreeSLAM/FreeSLAM_ros/configs/: mapping.rviz  mapping.yaml
FreeSLAM/FreeSLAM_ros/src/: mapping_node.cpp
common/cyber_msgs/: CMakeLists.txt  CMakeLists.txt~ivfc2021_master  README.md  package.xml
common/cyber_msgs/msg/: BodyworkControl.msg  BrakeFeedback.msg  BrakeStateFeedback.msg  CanFrame.msg  ChassisInfo.msg  GimbalCommand.msg  LocalTrajList.msg  LqrDebug.msg  Object.msg  ParkingTrajList.msg  RoutingResult.msg  SpeedFeedback.msg  SteerFeedback.msg  SteerStateFeedback.msg  TrafficInformation.msg  brakecmd.msg  speedcmd.msg  steercmd.msg
common/cyber_srvs/: CMakeLists.txt
common/cyber_srvs/srv/: RLPlannerService.srv
iekf3d/: .gitignore  CMakeLists.txt  package.xml
iekf3d/configs/: configs.yaml  lidar3d.rviz  localization.rviz
iekf3d/include/reflcpp/: runtime.h  serialization.h  yaml.h
iekf3d/src/: iekf3d_node.cpp
lidar/: CMakeLists.txt  package.xml
lidar/configs/: configs.yaml  watch_cloud.rviz
lidar/include/gimbal/: TimestampFloat.h
lidar/include/reflcpp/: yaml.h
lidar/launch/: lidar_node_test.launch  servo_lidar_localiztion.launch
lidar/scripts/: calibration_gimbal2car.py
lidar/src/: lidar_node.cpp
motion_strategy/: CMakeLists.txt  package.xml
motion_strategy/include/: GimbalCommand.h  point_type.h
motion_strategy/launch/: test_launch.launch
motion_strategy/scripts/: estimate2tum.py  gps2tum.py  gps2tum_trans.py
motion_strategy/src/: motion_strategy.cpp  sign_generation.cpp  smallFoV_simulation.cpp
pelco_control/: CMakeLists.txt  package.xml
pelco_control/configs/: configs.yaml
pelco_control/include/reflcpp/: core.h
pelco_control/scripts/: send_gimbal_cmd.py
pelco_control/src/: pelco_node.cpp
sim_gimbal_lidar/: CMakeLists.txt  package.xml
sim_gimbal_lidar/configs/: configs.yaml
sim_gimbal_lidar/src/: sim_gimbal_lidar_node.cpp
